Fix spacings

--- a/styles.css
+++ b/styles.css
@@ -215,6 +215,10 @@ button {
     width: 100%;
 }
 
+.who-we-are_text {
+    line-height: 1.5rem;
+}
+
 /* About Section */
 .about {
     max-width: 1200px;
@@ -268,7 +272,7 @@ button {
     max-width: 1200px;
     margin: 1rem auto;
 }
-  
+
 /* Course Tabs */
   
 [data-tab-content] { display: none; }
@@ -307,6 +311,7 @@ button {
     margin: auto;
     font-size: 16px;
     padding-top: 80px;
+    line-height: 1.8rem;
     padding-bottom: 50px;
 }
   
@@ -324,8 +329,7 @@ button {
     align-content: center;
     text-align: center;
 }
-  
-  
+
 /** Calendar **/
 .curriculum-calendar {
     display: grid;
@@ -413,7 +417,6 @@ button {
 
 .registration h2 {
     margin-bottom: 50px;
-    font-size: 35px;
 }
 
 .registration .checkbox {
@@ -584,7 +587,14 @@ hr {
 .accordion {
     width: 100%;
     max-width: 100%;
-    margin: 2rem auto;
+    padding: 50px;
+    padding-top: 10px;
+    margin-left: var(--sidebar-width); 
+}
+
+.accordionTitle {
+    font-size: 24px;
+    padding: 0 50px;
     margin-left: var(--sidebar-width); 
 }
 
